testing/2_functional/invalidRequestBody/v1.2.2/WIP/Subscriptions - bsp completeness/mwdi+diagram.completeness.subscriptions.plantuml
@startuml mwdi+diagram.completeness.subscriptions
skinparam responseMessageBelowArrow true

title
mwdi+testcase.completeness.subscriptions
end title

participant "Postman" as Postman
participant "Data" as Data
participant "Collection" as Collection

participant "/v1/notify-attribute-value-changes" as NAVC
participant "/v1/notify-object-creations" as NOC
participant "/v1/notify-object-deletions" as NOD


group Preparation
  Data --\\o Postman : {servers}
  activate Postman
  Postman --\\o Collection : {servers}
end

group /v1/notify-attribute-value-changes
  Collection --\\o Postman : {servers}
  Postman -> NAVC : {subscriber-application, subscriber-release-number, subscriber-operation,\n subscriber-protocol, subscriber-address, subscriber-port}
  Postman <-- NAVC : 204
  note right Postman #Orange
    check for 204
  end note
end

group /v1/notify-object-creations
  Collection --\\o Postman : {servers}
  Postman -> NOC : {subscriber-application, subscriber-release-number, subscriber-operation,\n subscriber-protocol, subscriber-address, subscriber-port}
  Postman <-- NOC : 204
  note right Postman #Orange
    check for 204
  end note
end

group /v1/notify-object-deletions
  Collection --\\o Postman : {servers}
  Postman -> NOD : {subscriber-application, subscriber-release-number, subscriber-operation,\n subscriber-protocol, subscriber-address, subscriber-port}
  Postman <-- NOD : 204
  note right Postman #Orange
    check for 204
  end note
end

deactivate Postman

@enduml
